# databricks-sql-scripts

./: Dockerfile  README.md  common.py  compose.yaml  get-iics-agents.py  get-iics-organizations.py  get-iics-user-logs.py  get-iics-user-roles.py  get-iics-user-weekly-logins.py  get-iics-users.py  pyproject.toml  requirements.in  requirements.txt
.github/: dependabot.yaml
.github/workflows/: build-container-image.yaml
dbx/: cnx.py
pg/: __init__.py  cnx.py  data_lake_postgres.py
