[project]
name = "databricks-sql-scripts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.0",
    "databricks-sql-connector<5",
    "datime>=2025.0",
    "notch>=2025.2",
    "psycopg2-binary>=2.9.10",
]
